// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Router should not render any child component for a non-existant root 1`] = `
Object {
  "baseElement": <body>
    <div>
      <main
        class="content"
      />
    </div>
  </body>,
  "container": <div>
    <main
      class="content"
    />
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Router should the dashboard component for root \`/\` 1`] = `
Object {
  "baseElement": <body>
    <div>
      <main
        class="content"
      />
    </div>
    <div>
      <main
        class="content"
      >
        <h1>
          Cash Graph Dashboard
        </h1>
        <main
          class="dashboard"
        >
          <h1>
            The tags are: 
          </h1>
          <p
            class="tags__loading"
          >
            Loading...
          </p>
          <h1>
            Spending ... 
          </h1>
          <p
            class="spending__loading"
          >
            Loading Spending
          </p>
        </main>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="content"
    >
      <h1>
        Cash Graph Dashboard
      </h1>
      <main
        class="dashboard"
      >
        <h1>
          The tags are: 
        </h1>
        <p
          class="tags__loading"
        >
          Loading...
        </p>
        <h1>
          Spending ... 
        </h1>
        <p
          class="spending__loading"
        >
          Loading Spending
        </p>
      </main>
    </main>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
